Refactor everything in structural!

--- a/SpeckleElementsGSA/SpeckleElementsGSA.csproj
+++ b/SpeckleElementsGSA/SpeckleElementsGSA.csproj
@@ -72,35 +72,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConversionRoutines\Structural2DThermalLoad.cs" />
-    <Compile Include="ConversionRoutines\StructuralAssembly.cs" />
-    <Compile Include="ConversionRoutines\StructuralGravityLoading.cs" />
-    <Compile Include="ConversionRoutines\StructuralSpringProperty.cs" />
-    <Compile Include="ConversionRoutines\StructuralLoadTaskBuckling.cs" />
-    <Compile Include="ConversionRoutines\StructuralStagedNodalRestraints.cs" />
-    <Compile Include="ConversionRoutines\StructuralConstructionStage.cs" />
-    <Compile Include="ConversionRoutines\Structural1DElementResult.cs" />
-    <Compile Include="ConversionRoutines\Structural1DLoadLine.cs" />
-    <Compile Include="ConversionRoutines\Structural2DElementResult.cs" />
-    <Compile Include="ConversionRoutines\Structural2DElement.cs" />
-    <Compile Include="ConversionRoutines\Structural2DLoadPanel.cs" />
-    <Compile Include="ConversionRoutines\Structural2DLoad.cs" />
-    <Compile Include="ConversionRoutines\Structural2DVoid.cs" />
-    <Compile Include="ConversionRoutines\Structural2DProperty.cs" />
-    <Compile Include="ConversionRoutines\Structural2DElementMesh.cs" />
-    <Compile Include="ConversionRoutines\Structural1DElementPolyline.cs" />
-    <Compile Include="ConversionRoutines\Structural1DLoad.cs" />
-    <Compile Include="ConversionRoutines\Structural1DElement.cs" />
-    <Compile Include="ConversionRoutines\Structural0DLoad.cs" />
-    <Compile Include="ConversionRoutines\StructuralLoadTask.cs" />
-    <Compile Include="ConversionRoutines\StructuralLoadCombo.cs" />
-    <Compile Include="ConversionRoutines\StructuralLoadCase.cs" />
-    <Compile Include="ConversionRoutines\StructuralMaterialSteel.cs" />
-    <Compile Include="ConversionRoutines\StructuralMaterialConcrete.cs" />
-    <Compile Include="ConversionRoutines\Structural1DProperty.cs" />
-    <Compile Include="ConversionRoutines\StructuralNode.cs" />
-    <Compile Include="ConversionRoutines\StructuralMiscResult.cs" />
-    <Compile Include="ConversionRoutines\StructuralNodeResult.cs" />
+    <Compile Include="ConversionRoutines\Loads\Structural2DThermalLoad.cs" />
+    <Compile Include="ConversionRoutines\Miscellaneous\StructuralAssembly.cs" />
+    <Compile Include="ConversionRoutines\Loads\StructuralGravityLoading.cs" />
+    <Compile Include="ConversionRoutines\Properties\StructuralSpringProperty.cs" />
+    <Compile Include="ConversionRoutines\Loads\StructuralLoadTaskBuckling.cs" />
+    <Compile Include="ConversionRoutines\Miscellaneous\StructuralStagedNodalRestraints.cs" />
+    <Compile Include="ConversionRoutines\Miscellaneous\StructuralConstructionStage.cs" />
+    <Compile Include="ConversionRoutines\Results\Structural1DElementResult.cs" />
+    <Compile Include="ConversionRoutines\Loads\Structural1DLoadLine.cs" />
+    <Compile Include="ConversionRoutines\Results\Structural2DElementResult.cs" />
+    <Compile Include="ConversionRoutines\NodesAndElements\Structural2DElement.cs" />
+    <Compile Include="ConversionRoutines\Loads\Structural2DLoadPanel.cs" />
+    <Compile Include="ConversionRoutines\Loads\Structural2DLoad.cs" />
+    <Compile Include="ConversionRoutines\NodesAndElements\Structural2DVoid.cs" />
+    <Compile Include="ConversionRoutines\Properties\Structural2DProperty.cs" />
+    <Compile Include="ConversionRoutines\NodesAndElements\Structural2DElementMesh.cs" />
+    <Compile Include="ConversionRoutines\NodesAndElements\Structural1DElementPolyline.cs" />
+    <Compile Include="ConversionRoutines\Loads\Structural1DLoad.cs" />
+    <Compile Include="ConversionRoutines\NodesAndElements\Structural1DElement.cs" />
+    <Compile Include="ConversionRoutines\Loads\Structural0DLoad.cs" />
+    <Compile Include="ConversionRoutines\Loads\StructuralLoadTask.cs" />
+    <Compile Include="ConversionRoutines\Loads\StructuralLoadCombo.cs" />
+    <Compile Include="ConversionRoutines\Loads\StructuralLoadCase.cs" />
+    <Compile Include="ConversionRoutines\Properties\StructuralMaterialSteel.cs" />
+    <Compile Include="ConversionRoutines\Properties\StructuralMaterialConcrete.cs" />
+    <Compile Include="ConversionRoutines\Properties\Structural1DProperty.cs" />
+    <Compile Include="ConversionRoutines\NodesAndElements\StructuralNode.cs" />
+    <Compile Include="ConversionRoutines\Results\StructuralMiscResult.cs" />
+    <Compile Include="ConversionRoutines\Results\StructuralNodeResult.cs" />
     <Compile Include="ConversionsBase.cs" />
     <Compile Include="Enum.cs" />
     <Compile Include="GSAInterfacer.cs" />
