--- a/SpeckleElements/SpeckleElementsClasses.csproj
+++ b/SpeckleElements/SpeckleElementsClasses.csproj
@@ -49,9 +49,17 @@
   <ItemGroup>
     <Compile Include="Base.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StructuralBase.cs" />
-    <Compile Include="StructuralEnum.cs" />
-    <Compile Include="StructuralExtension.cs" />
+    <Compile Include="Structural\Extensions\Properties.cs" />
+    <Compile Include="Structural\Base.cs" />
+    <Compile Include="Structural\Extensions\Base.cs" />
+    <Compile Include="Structural\Extensions\Loads.cs" />
+    <Compile Include="Structural\Extensions\Miscellaneous.cs" />
+    <Compile Include="Structural\Extensions\NodesAndElements.cs" />
+    <Compile Include="Structural\Loads.cs" />
+    <Compile Include="Structural\Miscellaneous.cs" />
+    <Compile Include="Structural\NodesAndElements.cs" />
+    <Compile Include="Structural\Properties.cs" />
+    <Compile Include="Structural\Results.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SpeckleCoreGeometry\SpeckleCoreGeometryClasses\SpeckleCoreGeometryClasses.csproj">
