--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,6 +30,7 @@ before_build:
 build:
   publish_nuget: true
   include_nuget_references: true
+  publish_nuget_symbols: true
   project: SpeckleElements.sln
   verbosity: minimal
 
