--- a/SpeckleElementsClasses/SpeckleElementsClasses.csproj
+++ b/SpeckleElementsClasses/SpeckleElementsClasses.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{42E1DB9C-E4D5-4190-9977-874E8143DCC5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SpeckleElements</RootNamespace>
-    <AssemblyName>SpeckleElements</AssemblyName>
+    <RootNamespace>SpeckleElementsClasses</RootNamespace>
+    <AssemblyName>SpeckleElementsClasses</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
