--- a/SpeckleElements/SpeckleElements.csproj
+++ b/SpeckleElements/SpeckleElements.csproj
@@ -74,6 +74,6 @@
     <ItemGroup>
       <BuildFiles Include="$(TargetDir)\*.*" />
     </ItemGroup>
-    <Copy SourceFiles="@(BuildFiles)" DestinationFolder="$(LocalAppData)\SpeckleKitsDebug\$(ProjectName)" />
+    <Copy SourceFiles="@(BuildFiles)" DestinationFolder="$(LocalAppData)\SpeckleKits\$(ProjectName)" />
   </Target>
 </Project>
