Add Rigid Constraints to Structural OM.

--- a/SpeckleElementsGSA/SpeckleElementsGSA.csproj
+++ b/SpeckleElementsGSA/SpeckleElementsGSA.csproj
@@ -172,6 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConversionRoutines\Loads\Structural2DThermalLoad.cs" />
+    <Compile Include="ConversionRoutines\Miscellaneous\StructuralRigidConstraints.cs" />
     <Compile Include="ConversionRoutines\Miscellaneous\StructuralAssembly.cs" />
     <Compile Include="ConversionRoutines\Loads\StructuralGravityLoading.cs" />
     <Compile Include="ConversionRoutines\NodesAndElements\Structural1DSpring.cs" />
