--- a/SpeckleElementsClasses/SpeckleElementsClasses.nuspec
+++ b/SpeckleElementsClasses/SpeckleElementsClasses.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>$id$</id>
+    <id>SpeckleElements</id>
     <version>$version$</version>
     <title>$title$</title>
     <authors>$author$</authors>
@@ -15,7 +15,7 @@
     <copyright>$copyright$</copyright>
     <tags>speckle elements</tags>
     <dependencies>
-      <dependency id="SpeckleCoreGeometry" version="1.1.0.57" />
+      <dependency id="SpeckleCoreGeometry" version="1.2.8" />
     </dependencies>
   </metadata>
 </package>
