--- a/appveyor.nuget.yml
+++ b/appveyor.nuget.yml
@@ -59,5 +59,5 @@ deploy:
     skip_symbols: false
     symbol_server:           # remove to push symbols to SymbolSource.org
     artifact: /.*\.nupkg/
-    on:
-      branch: nuget
+    on:             
+      appveyor_repo_tag: true
