--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,17 +60,14 @@ artifacts:
   path: SpeckleElements-%APPVEYOR_BUILD_VERSION%.zip
   name: Release
 
-#deploy to nuget
+#deploy to github
 deploy:
-  - release: SpeckleElements-$(APPVEYOR_BUILD_VERSION)
+  - provider: GitHub
+    release: SpeckleElements-$(APPVEYOR_BUILD_VERSION)
     tag: $(APPVEYOR_REPO_TAG_NAME)
-    description: 'Revit-centric object model built on top of SpeckleCoreGeometry.'
-    provider: GitHub
     auth_token:
       secure: D5tPFvdQMg9sIe0sSvQjEWw4KAdOk1jyxNwiH5qP5DpDmUH6n6NgTdA+56vXS1Pe # your encrypted token from GitHub
     artifact: SpeckleElements-$(APPVEYOR_BUILD_VERSION).zip
-    draft: false
-    prerelease: true
     force_update: true
     on:              # release from master branch only
       appveyor_repo_tag: true        # deploy on tag push only
