--- a/SpeckleElementsClasses/packages.config
+++ b/SpeckleElementsClasses/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Countly" version="19.8.0" targetFramework="net471" />
+  <package id="DeviceId" version="4.3.0" targetFramework="net471" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net471" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net471" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net471" />
   <package id="Revit.RevitApiUI.x64" version="2019.0.0" targetFramework="net471" />
-  <package id="SpeckleCore" version="1.6.1" targetFramework="net471" />
+  <package id="SpeckleCore" version="1.6.17-wip" targetFramework="net471" />
   <package id="SpeckleCoreGeometry" version="1.2.8" targetFramework="net471" />
   <package id="sqlite-net-pcl" version="1.5.231" targetFramework="net471" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.11" targetFramework="net471" />
