--- a/SpeckleElementsRevit/SpeckleElementsRevit.csproj
+++ b/SpeckleElementsRevit/SpeckleElementsRevit.csproj
@@ -118,6 +118,7 @@
     <Compile Include="ConversionRoutines\Floor.cs" />
     <Compile Include="ConversionRoutines\Room.cs" />
     <Compile Include="ConversionRoutines\Shaft.cs" />
+    <Compile Include="ConversionRoutines\DirectShape.cs" />
     <Compile Include="ConversionRoutines\Topography.cs" />
     <Compile Include="ConversionRoutines\Wall.cs" />
     <Compile Include="ConversionsBase.cs" />
