--- a/SpeckleElementsRevit/SpeckleElementsRevit.csproj
+++ b/SpeckleElementsRevit/SpeckleElementsRevit.csproj
@@ -109,7 +109,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConversionRoutines\Curve.cs" />
+    <Compile Include="ConversionRoutines\ModelCurve.cs" />
     <Compile Include="ConversionRoutines\BeamBrace.cs" />
     <Compile Include="ConversionRoutines\AdaptiveComponent.cs" />
     <Compile Include="ConversionRoutines\Column.cs" />
