--- a/SpeckleElementsRevit/packages.config
+++ b/SpeckleElementsRevit/packages.config
@@ -8,7 +8,7 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net471" />
   <package id="Revit.RevitApi.x64" version="2019.0.0" targetFramework="net471" />
   <package id="Revit.RevitApiUI.x64" version="2019.0.0" targetFramework="net471" />
-  <package id="SpeckleCore" version="1.6.17-wip" targetFramework="net471" />
+  <package id="SpeckleCore" version="1.8.3.463" targetFramework="net471" />
   <package id="SpeckleCoreGeometry" version="1.2.8" targetFramework="net471" />
   <package id="sqlite-net-pcl" version="1.5.231" targetFramework="net471" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.11" targetFramework="net471" />
@@ -17,5 +17,6 @@
   <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.11" targetFramework="net471" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.11" targetFramework="net471" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.11" targetFramework="net471" />
+  <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net471" />
   <package id="WebSocketSharp-NonPreRelease" version="1.0.0" targetFramework="net471" />
 </packages>
